--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Use Your Words!</title>
+        <title>Своими Словами!</title>
         <meta name="description" content="">
         <meta charset="utf-8">
         <link rel="icon" type="image/png" href="images/favicon.ico">
@@ -20,17 +20,17 @@
                 <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> 
                 to improve your experience.</p><![endif]--> 
         <noscript>
-            <h3 style="color: white;">ERROR: Javascript must be enabled to play. Please enable Javascript in your browser's settings and reload the page.</h3>
+            <h3 style="color: white;">ОШИБКА: Javascript должен быть включён для воспроизведения. Пожалуйста, включите Javascript в настройках своего браузера и перезагрузите страницу.</h3>
         </noscript>
         <div id="header">
             <img src="img/logo.png" class="img-responsive center-block" vspace="30"/>
             <div id="container" class="container"></div>
             <div id="footer">
-                <p style="color: white; margin-top: 8%;">VERSION 1.0.0</p>
+                <p style="color: white; margin-top: 8%;">ВЕРСИЯ 1.0.0</p>
                 <a href="http://www.smilingbuddhagames.com/help/#browser" target="_blank">
-                    <p class="pull-right" style="color: #e4e0e8; text-decoration: underline;">Having trouble?</p>
+                    <p class="pull-right" style="color: #e4e0e8; text-decoration: underline;">Есть проблема?</p>
                 </a>
-                <p style="color: pink; font-weight: bold;" id="socketError">ERROR: Cannot reach server. Please check connectivity or Wi-Fi status.</p>
+                <p style="color: pink; font-weight: bold;" id="socketError">ОШИБКА: Невозможно связаться с сервером. Пожалуйста, проверьте подключение или состояние Wi-Fi.</p>
             </div>
         </div>
         <script src="js/socket.io-1.4.5.js"></script>
