--- a/connectToRoom.html
+++ b/connectToRoom.html
@@ -3,14 +3,14 @@
       <div>
         <form onsubmit="connectClick(); return false;">
           <div>
-            <label for="roomcode" class="text-signin">ROOM CODE</label>
+            <label for="roomcode" class="text-signin">КОД КОМНАТЫ</label>
             <br>
-            <input id="roomcode" class="inlineinput" type="text" placeholder="ENTER 4-LETTER CODE" style="text-transform:uppercase;" maxlength="4" autocorrect="off" autocomplete="off" />
+            <input id="roomcode" class="inlineinput" type="text" placeholder="ВВЕДИ 4-БУКВЕННЫЙ КОД" style="text-transform:uppercase;" maxlength="4" autocorrect="off" autocomplete="off" />
           </div>
           <div class="pure-u-2-3 pull-right">
             <div style="margin-left:5px; margin-right:5px;">
               <section class="flat">
-                <button type="button" id="connect" class="button-med pull-right">CONNECT</button>
+                <button type="button" id="connect" class="button-med pull-right">ПРИСОЕДИНИТЬСЯ</button>
                 <section>
             </div>
           </div>
