--- a/input.html
+++ b/input.html
@@ -3,16 +3,16 @@
       <div>
         <form onsubmit="onEnterClick(); return false;">
           <div>
-            <label for="answer" class="text-signin" id="taskText">Answer</label>
+            <label for="answer" class="text-signin" id="taskText">Ответ</label>
             <br>
-            <textarea id="answer" class="text-input" rows="4" type="text" placeholder="Enter answer..." value="" style="width:100%; height: 50%;" maxlength="150"></textarea>
+            <textarea id="answer" class="text-input" rows="4" type="text" placeholder="Введи ответ... " value="" style="width:100%; height: 50%;" maxlength="150"></textarea>
           </div>
           <div>
             <div style="">
               <br>
               <section class="flat">
-                <button type="button" id="button-enter" class="button-med" onclick="onEnterClick()">ENTER</button>
-                <button type="button" id="button-punt" class="button-med" onclick="onPuntClick()">HOUSE DECOY</button>
+                <button type="button" id="button-enter" class="button-med" onclick="onEnterClick()">ОТПРАВИТЬ</button>
+                <button type="button" id="button-punt" class="button-med" onclick="onPuntClick()">СПАСАЛКА</button>
               </section>
             </div>
           </div>
