--- a/joinRoom.html
+++ b/joinRoom.html
@@ -5,19 +5,19 @@
           <div>
             <div class="radioList">
               <ul id="inactiveUsers">
-                <label class="text-signin">INACTIVE USERS</label>
+                <label class="text-signin">НЕАКТИВНЫЕ ИГРОКИ</label>
               </ul>
             </div>
           </div>
           <div id="newUserContainer">
-            <label for="name" class="text-signin">NAME</label>
+            <label for="name" class="text-signin">ИМЯ</label>
             <br>
-            <input id="name" class="inlineinput" type="text" placeholder="ENTER NAME" maxlength="25" value="" autocorrect="off" autocomplete="off" />
+            <input id="name" class="inlineinput" type="text" placeholder="ВВЕДИ ИМЯ" maxlength="25" value="" autocorrect="off" autocomplete="off" />
           </div>
           <div class="pure-u-2-3 pull-right">
             <div style="margin-left:5px; margin-right:5px;">
               <section class="flat">
-                <button type="button" id="join" class="button-med pull-right" disabled>JOIN</button>
+                <button type="button" id="join" class="button-med pull-right" disabled>ВОЙТИ</button>
               </section>
             </div>
           </div>
