--- a/login.html
+++ b/login.html
@@ -6,22 +6,22 @@
             <ul id="playerType">
               <li>
                 <input name="radio" id="spectator" type="radio" />
-                <label for="spectator">I'm a SPECTATOR</label>
+                <label for="spectator">Я - ЗРИТЕЛЬ</label>
               </li>
               <li>
                 <input name="radio" id="player" type="radio" />
-                <label for="player">I'm a PLAYER</label>
+                <label for="player">Я - ИГРОК</label>
               </li>
             </ul>
           </div>
           <div id="passwordGrop" class="pure-control-group">
-            <label for="name" class="text-signin">PASSWORD</label>
-            <input id="password" class="inlineinput" type="password" placeholder="ENTER PASSWORD" maxlength="25" value="" autocorrect="off" autocomplete="off" />
+            <label for="name" class="text-signin">ПАРОЛЬ</label>
+            <input id="password" class="inlineinput" type="password" placeholder="ВВЕСТИ ПАРОЛЬ" maxlength="25" value="" autocorrect="off" autocomplete="off" />
           </div>
           <div class="pure-u-2-3 pull-right">
             <div style="margin-left:5px; margin-right:5px;">
               <section class="flat">
-                <button type="button" id="join" class="button-med pull-right">JOIN</button>
+                <button type="button" id="join" class="button-med pull-right">ВОЙТИ</button>
               </section>
             </div>
           </div>
