--- a/voting.html
+++ b/voting.html
@@ -2,14 +2,14 @@
     <div id="page-signin" class="panel">
       <div>
         <form class="pure-form">
-          <label for="votes" class="text-signin">VOTE FOR YOUR FAVORITE</label>
+          <label for="votes" class="text-signin">ГОЛОСУЙ ЗА ЛУЧШЕГО</label>
           <div class="radioList">
             <ul id="votes"></ul>
           </div>
           <div class="pure-u-2-3 pull-right">
             <div style="margin-left:5px; margin-right:5px;">
               <section class="flat">
-                <button type="button" id="button-enter" class="button-med pull-right" onclick="onVoteClick()" disabled>VOTE</button>
+                <button type="button" id="button-enter" class="button-med pull-right" onclick="onVoteClick()" disabled>ВЫБРАТЬ</button>
               </section>
             </div>
           </div>
