--- a/wait.html
+++ b/wait.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div id="page-signin" class="panel">
       <div>
-        <label for="name" class="text-signin" id="waitText">WAITING</label>
+        <label for="name" class="text-signin" id="waitText">ОЖИДАЕМ</label>
         <br />
         <br />
         <section class="spinner" id="waitSpinner" style="position: relative;">
@@ -9,7 +9,7 @@
         </section>
         <br />
         <p id="tipText" style="color:white">
-          <br>TIP: </b>
+          <br>СОВЕТ: </b>
         </p>
       </div>
     </div>
