--- a/connectToRoom.html
+++ b/connectToRoom.html
@@ -5,10 +5,10 @@
           <div>
             <label for="roomcode" class="text-signin">КОД КОМНАТЫ</label>
             <br>
-            <input id="roomcode" class="inlineinput" type="text" placeholder="ВВЕДИ 4-БУКВЕННЫЙ КОД" style="text-transform:uppercase;" maxlength="4" autocorrect="off" autocomplete="off" />
+            <input id="roomcode" class="inlineinput" type="text" placeholder="ВВЕДИ 4-БУКВЕННЫЙ КОД" maxlength="4" autocorrect="off" autocomplete="off" />
           </div>
           <div class="pure-u-2-3 pull-right">
-            <div style="margin-left:5px; margin-right:5px;">
+            <div class="section">
               <section class="flat">
                 <button type="button" id="connect" class="button-med pull-right">ПРИСОЕДИНИТЬСЯ</button>
                 <section>
