--- a/joinRoom.html
+++ b/joinRoom.html
@@ -15,7 +15,7 @@
             <input id="name" class="inlineinput" type="text" placeholder="ВВЕДИ ИМЯ" maxlength="25" value="" autocorrect="off" autocomplete="off" />
           </div>
           <div class="pure-u-2-3 pull-right">
-            <div style="margin-left:5px; margin-right:5px;">
+            <div class="section">
               <section class="flat">
                 <button type="button" id="join" class="button-med pull-right" disabled>ВОЙТИ</button>
               </section>
