--- a/voting.html
+++ b/voting.html
@@ -7,7 +7,7 @@
             <ul id="votes"></ul>
           </div>
           <div class="pure-u-2-3 pull-right">
-            <div style="margin-left:5px; margin-right:5px;">
+            <div class="section">
               <section class="flat">
                 <button type="button" id="button-enter" class="button-med pull-right" onclick="onVoteClick()" disabled>ВЫБРАТЬ</button>
               </section>
