--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1">
         <title>Своими Словами!</title>
         <meta name="description" content="">
-        <meta charset="utf-8">
         <link rel="icon" type="image/png" href="images/favicon.ico">
-        <meta name="viewport" content="minimal-ui width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="minimal-ui width=device-width, minimal-ui, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -26,17 +25,18 @@
             <img src="img/logo.png" class="img-responsive center-block" vspace="30"/>
             <div id="container" class="container"></div>
             <div id="footer">
-                <p style="color: white; margin-top: 8%;">ВЕРСИЯ 1.0.0</p>
-                <a href="http://www.smilingbuddhagames.com/help/#browser" target="_blank">
-                    <p class="pull-right" style="color: #e4e0e8; text-decoration: underline;">Есть проблема?</p>
-                </a>
-                <p style="color: pink; font-weight: bold;" id="socketError">ОШИБКА: Невозможно связаться с сервером. Пожалуйста, проверьте подключение или состояние Wi-Fi.</p>
+                <div class="footer">
+                    <p class="version">ВЕРСИЯ 1.0.0-02ru</p>
+                    <p class="dyhp"><a href="http://www.smilingbuddhagames.com/help/#browser" target="_blank"></a>Есть проблема?</a></p>
+                </div>
+                <p class="socketError" id="socketError">ОШИБКА: Невозможно связаться с сервером. Пожалуйста, проверьте подключение или состояние Wi-Fi.</p>
             </div>
         </div>
-        <script src="js/socket.io-1.4.5.js"></script>
-        <script async src="//twemoji.maxcdn.com/2/twemoji.min.js?2.2.3"></script>
-        <script defer src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script defer src="//cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js"></script>
+        <script src="https://wordsgame.lol/js/socket.io-1.4.5.js"></script>
+        <script async src="https://twemoji.maxcdn.com/2/twemoji.min.js?2.2.3"></script>
+        <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js"></script>
         <script defer src="js/game/main.js"></script>
+        <script defer src="https://github.com/mingchoi/Multi-Language/blob/master/jquery.MultiLanguage.min.js"></script>
     </body>
 </html>
