--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <input id="password" class="inlineinput" type="password" placeholder="ВВЕСТИ ПАРОЛЬ" maxlength="25" value="" autocorrect="off" autocomplete="off" />
           </div>
           <div class="pure-u-2-3 pull-right">
-            <div style="margin-left:5px; margin-right:5px;">
+            <div class="section">
               <section class="flat">
                 <button type="button" id="join" class="button-med pull-right">ВОЙТИ</button>
               </section>
