--- a/react.html
+++ b/react.html
@@ -24,7 +24,7 @@
             </ul>
           </div>
           <div class="pure-u-2-3 pull-right">
-            <div style="margin-left:5px; margin-right:5px;">
+            <div class="section">
               <section class="flat">
                 <button type="button" id="button-react" class="button-med" onclick="onReactClick()">ОТРЕАГИРОВАТЬ</button>
                 <button type="button" id="button-pass" class="button-med" style="margin-right: 60px" onclick="onPassClick()" disabled>ПРОПУСТИТЬ</button>
