--- a/ru/connectToRoom.html
+++ b/ru/connectToRoom.html
@@ -5,7 +5,9 @@
           <div>
             <label for="roomcode" class="text-signin">КОД КОМНАТЫ</label>
             <br>
-            <input id="roomcode" class="inlineinput" type="text" placeholder="ВВЕДИ 4-БУКВЕННЫЙ КОД" maxlength="4" autocorrect="off" autocomplete="off" />
+            <div id="inputfor">
+              <input id="roomcode" class="inlineinput" type="text" placeholder="ВВЕДИ 4-БУКВЕННЫЙ КОД" maxlength="4" autocorrect="off" autocomplete="off" />
+            </div>
           </div>
           <div class="pure-u-2-3 pull-right">
             <div class="section">
